--- a/mystyle.css
+++ b/mystyle.css
@@ -34,3 +34,18 @@ body{
   font-family: Georgia, serif;
   background-color: green;
 }
+.surfing {
+  width: 14em;
+  border: 2px solid #333;
+  box-shadow: 10px 10px 5px #444;
+  padding: 12px 12px;
+  background-image: linear-gradient(120deg, #fff , #ddd , #ccc);
+}
+
+.class {
+  color: blue;
+}
+
+.id {
+  color: black;
+}
