--- a/mystyle.css
+++ b/mystyle.css
@@ -34,6 +34,10 @@ body{
   font-family: Georgia, serif;
   background-color: green;
 }
+
+p{
+  font-family: Georgia, serif;
+}
 .surfing {
   width: 14em;
   border: 2px solid #333;
